--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,13 +1,9 @@
 {
-    "version":2,
-    "builds":[
-        {
-            "src":"package.json",
-            "use":"@vercel/static-build",
-            "config":{"distDir":"dist"}
-        }
-    ],
-    "rewrites":[
-        {"sources":"/(.*)","destination":"/"}
-    ]
+  "version": 2,
+  "builds": [
+      {
+          "src": "./index.js",
+          "use": "@vercel/node"
+      }
+  ]
 }
